--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroui/avatar": "^2.2.10",
     "@heroui/button": "^2.2.13",
     "@heroui/card": "^2.2.13",
     "@heroui/image": "^2.2.9",
