--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@fontsource/roboto": "^5.2.5",
     "@heroui/avatar": "^2.2.10",
     "@heroui/button": "^2.2.13",
     "@heroui/card": "^2.2.13",
@@ -19,6 +22,8 @@
     "@heroui/slider": "^2.4.11",
     "@heroui/system": "^2.4.10",
     "@heroui/theme": "^2.4.9",
+    "@mui/icons-material": "^6.4.8",
+    "@mui/material": "^6.4.8",
     "ffmpeg-static": "^5.2.0",
     "fluent-ffmpeg": "^2.1.3",
     "framer-motion": "^12.4.7",
@@ -27,6 +32,7 @@
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "react-youtube": "^10.1.0",
     "ytdl-core": "^4.11.5"
   },
